--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "command-line"
   ],
   "dependencies": {
+    "async": "^0.9.0",
+    "asyncdi": "^1.1.0",
+    "debug": "^2.1.3",
+    "konfy": "^0.2.1",
+    "lodash": "^3.6.0",
     "meow": "^3.1.0"
   },
   "bin": {
