--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "async": "^0.9.0",
     "asyncdi": "^1.1.0",
+    "chalk": "^1.0.0",
     "debug": "^2.1.3",
     "konfy": "^0.2.1",
     "lodash": "^3.6.0",
-    "meow": "^3.1.0"
+    "meow": "^3.1.0",
+    "require-module": "^0.1.0"
   },
   "bin": {
     "headstone": "cli.js"
